<resources>
    <string name="app_name">Busy calendar</string>
    <string name="Login_speech">Hello, you can login by Vk or Facebook:</string>
    <string name="btn_login_vk">Login Vk</string>
    <string name="btn_login_facebook">Login Facebook</string>
    <string name="password_hint">Password</string>
    <string name="login_hint">Login</string>
    <string name="events_Name">Name:</string>
    <string name="label_from">From:</string>
    <string name="label_to">To:</string>
    <string name="choose_start_time">Choose start time</string>
    <string name="choose_end_time">Choose end time</string>
    <string name="choose_from">00:00</string>
    <string name="alert_txt">Alerts:</string>
    <string name="status_txt">Status:</string>
    <string name="status_textview">Your status</string>
    <string name="description_edittext">Description</string>
    <string name="event_name_hint">Enter your event\'s name</string>
    <string name="textview_allday_text">All day</string>
    <string name="social">Social:</string>
    <string name="facebook_name">Facebook:</string>
    <string name="vk_name">Vk:</string>
    <string name="system_sounds_switch">System sounds</string>
    <string name="notifications_switch">Notifications</string>
    <string name="ringer_silent_mode_switch">Ringer silent mode</string>
    <string name="alarm_sound_switch">Alarm sound switch</string>
    <string name="phone_ring_switch">Phone ring</string>
    <string name="music_sound_switch">Music sound</string>
    <string name="title_activity_main2">Main2Activity</string>
    <integer name="com_vk_sdk_AppId">5645451</integer>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="facebook_app_id">864214090351529</string>
    <string name="action_settings">Settings</string>
    <string name="events_list">Events list</string>
    <string name="ignore_settings">Ignore settings</string>
    <string name="accept_button">Accept button</string>
    <string name="exit_button">Exit button</string>
    <string name="next_month">Next month</string>
    <string name="previous_month">Previous month</string>
    <string name="change_settings">Change settings</string>
    <string name="set_status">Set status</string>
    <string name="turn_on_internet_please">Turn on internet please</string>
    <string name="ok">Ok</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="save_event">Save</string>
    <string name="from_hint">From</string>
    <string name="to_hint">To</string>
    <string name="are_you_sure">Are you sure?</string>
</resources>
