<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <include layout="@layout/event_bar"/>
    <LinearLayout
        android:background="@color/colorBlueDark"
        android:layout_marginTop="54dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="48dp">
    <EditText
        android:layout_gravity="center_vertical"
        android:hint="Enter your event's name"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:background="@drawable/edittextshapename"
        android:id="@+id/event_name"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    </LinearLayout>
    <LinearLayout
        android:layout_marginTop="110dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:textSize="18sp"
            android:layout_marginLeft="15dp"
            android:text="@string/label_from"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:textSize="18sp"
            android:layout_marginLeft="30dp"
            android:layout_width="60dp"
            android:layout_height="wrap_content"/>
        <TextView
            android:textSize="18sp"
            android:layout_marginLeft="30dp"
            android:text="@string/label_to"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:textSize="18sp"
            android:layout_marginLeft="30dp"
            android:layout_width="60dp"
            android:layout_height="wrap_content"/>
    </LinearLayout>
    <LinearLayout
        android:layout_marginTop="140dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/btn_start_time"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:text="@string/choose_start_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <Button
            android:id="@+id/btn_end_name"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:text="@string/choose_end_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>
</FrameLayout>